master :bug: Align logos with text

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ body {
   clear: both;
   margin-top: 5px;
   margin-bottom: 5px;
-  margin-left: 5px;
+  margin-left: 15px;
   margin-right: 15px;
   width: 48px;
   height: 48px;
